--- a/desktop/files/html/about.html
+++ b/desktop/files/html/about.html
@@ -1,16 +1,20 @@
-
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	</head>
 	<body>
 		<div id="HeaderContent" data-type="template">
-			<a href="http://spotify.com/" target="_blank"><div class="headerLogoSpotify"></div></a>
+			<a href="http://spotify.com" target="_blank"><div class="headerLogoSpotify"></div></a>
 			<a href="https://www.canneslions.com/home/" target="_blank"><div class="headerLogoCannes"></div></a>
 		</div>
 
 		<div id="AboutContent" data-type="template">
 			<div class="aboutWrapper">
 				<div class="tAndCWrapper aboutCenterWrapper">
-						<h1 class="tcTitle" data-type="copy" data-copyid="desktop.cannes.about.title"></h1>
+						<h1 class="tcTitle" data-type='copy' data-copyId='desktop.cannes.about.title'></h1>
 						<div class="mainTcCopySection">
-							<div data-type="copy" data-copyid="desktop.cannes.about.content"></div>
+							<div data-type='copy' data-copyId='desktop.cannes.about.content'></div>
 						</div>
 						 
 
@@ -21,10 +25,11 @@
 				<div class="aboutIntroWrapper aboutCenterWrapper">
 					<div class="cannesImage"></div>
 					<h3 class="aboutIntroHeader">It all starts with a song</h3>
-					<div data-type="copy" data-copyid="desktop.cannes.about.content"></div>
+					<div data-type='copy' data-copyId='desktop.cannes.about.content'></div>
 					<div class="aboutIntroCloseBtn aboutCloseBtn"></div>
 				</div>
 				
 			</div>
 		</div>
-	
+	</body>
+</html>
