--- a/desktop/files/html/header.html
+++ b/desktop/files/html/header.html
@@ -1,14 +1,20 @@
-
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	</head>
 	<body>
 		<div id="HeaderContent" data-type="template">
-			<a href="http://spotify.com/" target="_blank"><div class="headerLogoSpotify"></div></a>
+			<a href="http://spotify.com" target="_blank"><div class="headerLogoSpotify"></div></a>
 			<a href="https://www.canneslions.com/home/" target="_blank"><div class="headerLogoCannes"></div></a>
 		</div>
 
 		<div id="FooterContent" data-type="template">
-			<a href="http://spotify.com/" target="_blank"><p>Spotify</p></a>
+			<a href="http://spotify.com" target="_blank"><p>Spotify</p></a>
 			<div class="footerSeparator"></div>
 			<a href="https://www.spotify.com/us/legal/end-user-agreement/" target="_blank"><p>Terms &amp; Conditions</p></a>
 			<div class="footerSeparator"></div>
 			<p>Copyright 2014</p>
 		</div>
+	</body>
+</html>
