--- a/desktop/files/html/stats.html
+++ b/desktop/files/html/stats.html
@@ -1,4 +1,8 @@
-
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	</head>
 	<body>
 		<div id="StatsContainer" data-type="template">
 			<header>
@@ -46,7 +50,7 @@
 
 		<div id="StatsMainstreamContent" data-type="template">
 			<p class="copy">
-				It’s an eclectic bunch at Cannes.<br>
+				It’s an eclectic bunch at Cannes.<br/>
 				<span>_percent_%</span> are choosing mainstream songs.
 			</p>
 			<div class="persons">
@@ -77,9 +81,12 @@
 		<div id="StatsEnergyContent" data-type="template">
 			<p class="copy">The energy is normal.</p>
 			<div class="curve">
-				<img class="curve0" width="100%" src="./stats_files/statsEnergy0.png" alt="">
-				<img class="curve1" width="100%" src="./stats_files/statsEnergy1.png" alt="">
-				<img class="curve2" width="100%" src="./stats_files/statsEnergy2.png" alt="">
-				<img class="curve3" width="100%" src="./stats_files/statsEnergy3.png" alt="">
+				<img class="curve0" width="100%" src="../../images/interactive/statsEnergy0.png" alt=""></img>
+				<img class="curve1" width="100%" src="../../images/interactive/statsEnergy1.png" alt=""></img>
+				<img class="curve2" width="100%" src="../../images/interactive/statsEnergy2.png" alt=""></img>
+				<img class="curve3" width="100%" src="../../images/interactive/statsEnergy3.png" alt=""></img>
 			</div>
 		</div>
+
+	</body>
+</html>
